--- a/style.css
+++ b/style.css
@@ -5,4 +5,6 @@ p {
     color: white;
     font-family: monospace;
     font-size: 24.5px;
+    white-space-collapse: preserve;
+    white-space: pre;
 }
